# cgal

./: .gitignore  CMakeLists.txt  README.md  heuristic.md  main.py  performance_plan.md  pyproject.toml  test_plan.md
AdaptiveSolvers/: Makefile
AdaptiveSolvers/Src/: AdaptiveTreeVisualization.cpp  Array.h  Array.inl  BSplineData.inl  BinaryNode.h  ChunkPLY.cpp  CmdLineParser.h  CmdLineParser.inl  EDTInHeat.cpp  FEMTree.Evaluation.inl  FEMTree.Initialize.inl  FEMTree.SortedTreeNodes.inl  FEMTree.System.inl  FEMTree.inl  Factor.h  Geometry.h  Image.h  ImageStitching.cpp  JPEG.inl  MyAtomic.h  MyMiscellany.h  PNG.h  PPolynomial.h  Ply.inl  PlyFile.h  PointPartition.h  PointPartition.inl  PoissonReconClient.cpp  PoissonReconClientServer.inl  Polynomial.h  Polynomial.inl  PreProcessor.h  Rasterizer.h  Rasterizer.inl  Reconstruction.example.cpp  RegularGrid.inl  SSDRecon.cpp  ScaleNormals.cpp  SparseMatrix.h  SparseMatrix.inl  (+4 more)
include/: io_visualization.h  mesh_reconstruction.h  pipeline_config.h  skeleton_extraction.h  validation.h
preprocess/: CMakeLists.txt
preprocess/include/: attribute_transfer.h  io_visualization.h  mesh_reconstruction.h  pipeline_config.h  point_cloud_processing.h  skeleton_extraction.h  validation.h
preprocess/src/: io_visualization.cpp  pipeline_config.cpp  point_cloud_processing.cpp  preprocessor.cpp  skeleton_extraction.cpp  skeletonization.cpp  validation.cpp
preprocess/test/: test_attribute_transfer.cpp  test_mesh_reconstruction.cpp  test_point_cloud_processing.cpp
scripts/: from_bag.py
src/: mesh_reconstruction.cpp  pipeline_config.cpp  point_cloud_processing.cpp  skeleton_extraction.cpp  skeletonization.cpp
src/AdaptiveSolvers/Src/: Allocator.h  BSplineData.h  BlockedVector.h  DataStream.h  DataStream.imp.h  DataStream.imp.inl  DataStream.inl  Extrapolator.h  FEMTree.LevelSet.2D.inl  FEMTree.LevelSet.3D.inl  FEMTree.LevelSet.inl  FEMTree.WeightedSamples.inl  FEMTree.h  Geometry.inl  JPEG.h  MAT.h  MarchingCubes.h  MergePlyClientServer.h  MergePlyClientServer.inl  MultiThreading.h  MyExceptions.h  NestedVector.h  PNG.inl  PPolynomial.inl  ParameterPack.h  Ply.h  PlyFile.inl  PointExtent.h  PointExtent.inl  PointInterpolant.cpp  PointPartitionClientServer.h  PointPartitionClientServer.inl  PointsToDisks.cpp  PoissonRecon.client.inl  PoissonRecon.cpp  PoissonRecon.server.inl  PoissonReconClientServer.h  PoissonReconServer.cpp  Reconstructors.h  Reconstructors.streams.h  (+9 more)
src/pipeline/: pipeline_main.cpp  poisson_recon_wrapper.cpp  poisson_recon_wrapper.h  winding_number_operator_cpu.cpp  winding_number_operator_cuda.cu
src/pipeline/tests/: pipeline_tests.cpp
src/preprocess/: CMakeLists.txt  README.md
src/preprocess/include/: mesh_reconstruction.h  pipeline_config.h  ply_io.h  point_cloud_processing.h  skeleton_extraction.h
src/preprocess/src/: attribute_transfer.cpp  mesh_reconstruction.cpp  ply_io.cpp  preprocessor.cpp  skeleton_extraction.cpp  skeletonization.cpp  spatial_subsampler.cpp  validation.cpp
src/preprocess/test/: test_ply_io.cpp  test_skeletonization.cpp  test_validation.cpp
src/wnnc/cpp/: CMakeLists.txt  README.md
src/wnnc/cpp/results/: Armadillo_40000.xyz  bunny_noised.xyz
src/wnnc/cpp/src/: main.cpp
src/wnnc/cpp/src/wnnc/: normal_solver.h  octree.h  parallel.h  point_cloud_io.cpp  point_cloud_io.h  treecode_kernels.h  vec3.h  winding_number_operator.h
src/wnnc/cpp/tests/: treecode_tests.cpp
src/wnnc/python/: main_wnnc.py
src/wnnc/python/ext/: setup.py
src/wnnc/python/ext/gaussrecon_src/: main_GaussRecon_cpu.cpp
src/wnnc/python/ext/wn_treecode/wn_treecode_cpu/: wn_treecode_cpu_torch_interface.cpp
src/wnnc/python/ext/wn_treecode/wn_treecode_cuda/: wn_treecode_cuda.h  wn_treecode_cuda_kernels.cu  wn_treecode_cuda_torch_interface.cu
testing/stage5_skeleton/Lp_Boi/: Lp_Boi_skeleton.poly
wnnc/ext/gaussrecon_src/: main_GaussRecon_cuda.cu
wnnc/ext/wn_treecode/wn_treecode_cpu/: wn_treecode_cpu.h  wn_treecode_cpu_treeutils.cpp
