[project]
name = "wnnc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ninja>=1.13.0",
    "numpy>=2.4.6",
    "psutil>=7.2.2",
    "setuptools>=81.0.0",
    "tqdm>=4.67.3",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "torchaudio==2.11.0",
    "trimesh>=4.12.2",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }


[tool.uv.extra-build-dependencies]
wnnc = ["torch", "numpy", "setuptools"]
